Platform 0.70

* The HttpClient and AsyncHttpClients now implement Closeable and properly
  shutdown when used as lifecycle objects. Calling close shuts down the
  connection pool for the underlying Apache HTTP client.

Platform 0.69

* Library Upgrades

In this release we have upgraded the following dependencies:

    - Guava 13.0.1
    - jetty 8.1.8
    - httpclient 4.2.2
    - bval-jsr303 0.5
    - joda-time 2.1

NOTE: Guava 13 removes transitivity of the JSR-305 artifact (commonly used for @Nullable).
If your project depended on this, you need to add the following to your project's pom.xml file:

    <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
    </dependency>

* Mappable exception for JSON decoding errors

When there is a JSON decoding error, the JsonMapper.readFrom() method now throws newly defined
exceptions (instead of WebApplicationException). This allows them to be handled by an ExceptionMapper.
The newly defined exceptions are BeanValidationException and JsonMapperParsingException.

* Workaround for InetAddress.getLocalHost() throwing UnrecognizedHostException in Java 7u5 on MacOS

    - The jmx module now gets the default value of the local IP address from the node module.
    - The event-client module tries harder to get the local hostname

* We now detect some incorrect usage to EquivalenceTester.

To detect calls intended for EquivalenceTester<T>.addEquivalentGroup(Iterable<T>) that instead
call EquivalenceTester<Object>.addEquivalentGroup(T, T...), the latter method now prohibits calls
with a single argument that implements Iterable.

* Configuration classes, getters, setters, and default constructors no longer need to be public.

* @ConfigSecuritySensitive now redacts the configuration value in any generated error.

* [Bug] @ConfigMap attributes can now be tested by ConfigAssertions.assertFullMapping() and
  ConfigAssertions.assertDeprecatedEquivalence()
